--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Mobile app HTML landing page template to help you build a great online presence for your app which will convert visitors into users">
-    <meta name="author" content="Inovatik">
+    <meta name="description" content="Connecting Is Way more Easier">
+    <meta name="author" content="MagicJack">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
 	<meta property="og:site" content="" /> <!-- website link -->
 	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+	<meta property="" content="" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Leno - Mobile App HTML Landing Page Template</title>
+    <title>MagicJack</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
@@ -30,7 +30,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 
 	<!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="https://www.magicjack.com/img/magicJack-logo17.jpg">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
 
@@ -51,7 +51,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Leno</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" style="text-decoration:none;font-size:30px;" href="index.md">MagicJack</a>
+        <a class="navbar-brand logo-image" style="text-decoration:none;font-size:30px;" href="index.html">MagicJack</a>
 <img src="" alt="">
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="text-container">
-                            <h1>MAGICJACK HOME<br>FOR <span id="js-rotating">BUSINESS, MARKETERS,STUDENT</span></h1>
+                            <h1>MAGICJACK HOME<br>FOR <span id="js-rotating">BUSSINESS, MARKETERS,STUDENT</span></h1>
                             <p class="p-large">STAY CONNECTED WITH FRIENDS & FAMILY. Download it today!</p>
                             <a class="btn-solid-lg page-scroll" href="https://itunes.apple.com/us/app/free-calls-with-magicjack/id463926997?mt=8"><i class="fab fa-apple"></i>APP STORE</a>
                             <a class="btn-solid-lg page-scroll" href="https://play.google.com/store/apps/details?id=com.magicjack&hl=en"><i class="fab fa-google-play"></i>PLAY STORE</a>
@@ -168,7 +168,7 @@ With magicJack you can connect with friends and family using your high-speed int
               <p style='font-size:20px;'><i>magicJack is easy to set up with your computer. Use your telephone or the magicJack desktop application to receive calls. </i></p>
           </div>
       </div>
-      <img style='border-radius:20px;'src="https://www.magicjack.com/img/setup-with-computer.jpg" alt="">
+      <img style='border-radius:20px; margin-left:10%;'src="https://www.magicjack.com/img/setup-with-computer.jpg" alt="">
 
       <div class="row">
           <div class="steps" style="padding-left:20px">
